fix horiz scrollbar in chrome under some circumstances

--- a/www/src/css/main.styl
+++ b/www/src/css/main.styl
@@ -362,7 +362,7 @@ body{
 				border: 1px solid;
 				box-sizing: border-box;
 				overflow-y: scroll;
-				overflow-x: wrap;
+				overflow-x: hidden;
 				
 				.chatline {
 					
